--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,12 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - deepbiolab
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - deepbiolab/ilya30u30-paper-research
+  - deepbiolab/oas-gpt
+  - deepbiolab/diffbio
+  - deepbiolab/retrosynthesis-transformer
+  - deepbiolab/nn-zero-to-hero-in-science
+  - deepbiolab/llm-paper-research
