--- a/_config.yml
+++ b/_config.yml
@@ -301,8 +301,12 @@ jekyll-archives:
     tag: "/blog/tag/:name/"
     category: "/blog/category/:name/"
 
-display_tags: ["formatting", "images", "links", "math", "code", "blockquotes"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_tags: ["language-model", "vision-model", "vision-language-model", "generative-ai", "paper", 
+               "deep-Learning",  "machine-Learning", "reinforcement-learning", "meta-learning", "bayesian-optimization",
+               "c++", "python", "tutorials", "prompting", "productivity", "ml-ops", "algorithms",
+               "antibody-design", "bioprocess-deveopment", "robotics", "engineering"
+              ] # these tags will be displayed on the front page of your blog
+display_categories: ["ai", "science", "business", "programming", "leadership", "career", "cloud"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
@@ -421,7 +425,7 @@ lazy_loading_images: true # enables lazy loading of images (recommended)
 # Optional Features
 # -----------------------------------------------------------------------------
 
-enable_google_analytics: false # enables google analytics
+enable_google_analytics: true # enables google analytics
 enable_cronitor_analytics: false # enables cronitor RUM analytics
 enable_pirsch_analytics: false # enables Pirsch analytics (https://pirsch.io/)
 enable_google_verification: false # enables google site verification
