--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: tim-lin@deepbiolab.ai
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Deep learning and bioinformatics research projects and portfolio site.
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with al-folio theme.
+  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>.
 keywords: AI for Science, Deep Learning, Bioprocess Modeling, Large Language Models, Bayesian Optimization, PINN # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: logo-icon.svg # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -378,7 +378,7 @@ max_author_limit: 3 # leave blank to always show all authors
 more_authors_animation_delay: 10 # more authors are revealed on click using animation; smaller delay means faster animation
 
 # Enables publication thumbnails. If disabled, none of the publications will display thumbnails, even if specified in the bib entry.
-enable_publication_thumbnails: true
+enable_publication_thumbnails: false
 
 # -----------------------------------------------------------------------------
 # Jekyll Link Attributes
